--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Главная</title>
 </head>
 <body>
+    <a href="index.html">Главная</a>
     <a href="catalog/catalog.html">Каталог</a>
+    <a href="">Контакты</a>
     <h1>Главная страница</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem fuga ab iste, eum similique sit velit, 
         id quae ratione dolores perferendis blanditiis ex repellat, deleniti ipsum. Laboriosam nobis facere ratione.
