--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -20,5 +20,8 @@
         dolorem assumenda deleniti amet vel iusto iste, reprehenderit provident eos alias. Sit dignissimos delectus, 
         illum ad amet natus iure, nostrum nam ea exercitationem eveniet nesciunt, quas placeat vitae?
     </p>
+    <a href="">Изображение товара</a>
+    <a href="">Название товара</a>
+    <a href="">Описание товара</a>
 </body>
 </html>
