--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -6,6 +6,7 @@
     <title>Каталог</title>
 </head>
 <body>
+    <a href="catalog/catalog.html">Каталог</a>
     <a href="../index.html">Главная</a>
     <h1>Каталог</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi beatae cumque vel deserunt at ducimus. 
@@ -20,7 +21,10 @@
         dolorem assumenda deleniti amet vel iusto iste, reprehenderit provident eos alias. Sit dignissimos delectus, 
         illum ad amet natus iure, nostrum nam ea exercitationem eveniet nesciunt, quas placeat vitae?
     </p>
-    <a href="">Изображение товара</a>
+    <img src="../img/Кусок пирога.avif" alt="photo">
+    <img src="../img/Сок.avif" alt="photo">
+    <img src="../img/хлеб.avif" alt="photo">
+    <a href="image.html">Изображение товара</a>
     <a href="">Название товара</a>
     <a href="">Описание товара</a>
 </body>
