--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -8,6 +8,7 @@
 <body>
     <a href="catalog/catalog.html">Каталог</a>
     <a href="../index.html">Главная</a>
+    <a href="">Контакты</a>
     <h1>Каталог</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi beatae cumque vel deserunt at ducimus. 
         Alias dolorum facilis ex consequuntur cumque officiis exercitationem eum maiores illum error doloremque, 
