--- a/catalog/image.html
+++ b/catalog/image.html
@@ -8,6 +8,7 @@
 <body>
     <a href="../index.html">Главная</a>
     <a href="catalog.html">Каталог</a>
+    <a href="">Контакты</a>
     <h1>Изображение товара</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit iusto ab perferendis error, 
         earum commodi ipsam vero minus, adipisci maxime eum. Ratione hic vel 
