изменили размер картинки

--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -22,9 +22,9 @@
         dolorem assumenda deleniti amet vel iusto iste, reprehenderit provident eos alias. Sit dignissimos delectus, 
         illum ad amet natus iure, nostrum nam ea exercitationem eveniet nesciunt, quas placeat vitae?
     </p>
-    <img src="../img/Кусок пирога.avif" alt="photo">
-    <img src="../img/Сок.avif" alt="photo">
-    <img src="../img/хлеб.avif" alt="photo">
+    <img src="../img/Кусок пирога.avif" width="100" height="111" alt="photo">
+    <img src="../img/Сок.avif"  width="100" height="111" alt="photo">
+    <img src="../img/хлеб.avif"  width="100" height="111" alt="photo">
     <a href="image.html">Изображение товара</a>
     <a href="">Название товара</a>
     <a href="">Описание товара</a>
