--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -6,9 +6,9 @@
     <title>Каталог</title>
 </head>
 <body>
-    <a href="catalog/catalog.html">Каталог</a>
     <a href="../index.html">Главная</a>
-    <a href="">Контакты</a>
+    <a href="catalog/catalog.html">Каталог</a>
+    <a href="contacts.html">Контакты</a>
     <h1>Каталог</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi beatae cumque vel deserunt at ducimus. 
         Alias dolorum facilis ex consequuntur cumque officiis exercitationem eum maiores illum error doloremque, 
