--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="index.html">Главная</a>
-    <a href="catalog/catalog.html">Каталог</a>
-    <a href="catalog/contacts.html">Контакты</a>
-    <h1>Главная страница</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem fuga ab iste, eum similique sit velit, 
+    <a class ="naf-header" href="index.html">Главная</a>
+    <a class ="naf-header" href="catalog/catalog.html">Каталог</a>
+    <a class ="naf-header" href="catalog/contacts.html">Контакты</a>
+    <h1 class ="title">Главная страница</h1>
+    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem fuga ab iste, eum similique sit velit, 
         id quae ratione dolores perferendis blanditiis ex repellat, deleniti ipsum. Laboriosam nobis facere ratione.
     </p>
-    <h2>Добро пожаловать на сайт</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    <h2 class="text">Добро пожаловать на сайт</h2>
+    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.
         Voluptas nisi ratione odit officia alias eligendi architecto a ipsam hic quibusdam. 
         Atque nisi, accusantium magnam ratione ut aspernatur quidem quis quas.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
         Illo aperiam temporibus odio, odit rem voluptatibus in dignissimos eveniet ullam 
         voluptates non earum ex blanditiis cumque veritatis eaque! Tempore, eligendi magni?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
         At magnam placeat ipsa similique libero vitae, error, perferendis maiores tempora dolores saepe 
         laboriosam eos, nemo a asperiores atque aspernatur voluptatem obcaecati?</p>
 
