--- a/catalog/contacts.html
+++ b/catalog/contacts.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Контакты</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <a href="../index.html">Главная</a>
-    <a href="catalog.html">Каталог</a>
-    <a href="image.html">Изображение товара</a>
-    <h1>Мои контакты</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, quia. Ea illo voluptatibus exercitationem atque architecto? 
+    <a class ="naf-header" href="../index.html">Главная</a>
+    <a class ="naf-header" href="catalog.html">Каталог</a>
+    <a class ="naf-header" href="image.html">Изображение товара</a>
+    <h1 class ="title">Мои контакты</h1>
+    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, quia. Ea illo voluptatibus exercitationem atque architecto? 
         Accusamus assumenda rerum esse quisquam, nostrum ratione molestiae. Pariatur natus maiores facere quia voluptate?</p>
 </body>
 </html>
