--- a/catalog/image.html
+++ b/catalog/image.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Изображение товара</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <a href="../index.html">Главная</a>
-    <a href="catalog.html">Каталог</a>
-    <a href="contacts.html">Контакты</a>
-    <h1>Изображение товара</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit iusto ab perferendis error, 
+    <a class ="naf-header" href="../index.html">Главная</a>
+    <a class ="naf-header" href="catalog.html">Каталог</a>
+    <a class ="naf-header" href="contacts.html">Контакты</a>
+    <h1 class ="title">Изображение товара</h1>
+    <p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit iusto ab perferendis error, 
         earum commodi ipsam vero minus, adipisci maxime eum. Ratione hic vel 
         explicabo est maiores pariatur quam sunt.</p>
         <img src="../img/Кусок пирога.avif" alt="Пирог">
