--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Каталог</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <a href="../index.html">Главная</a>
-    <a href="catalog/catalog.html">Каталог</a>
-    <a href="contacts.html">Контакты</a>
-    <h1>Каталог</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi beatae cumque vel deserunt at ducimus. 
+    <a class ="naf-header" href="../index.html">Главная</a>
+    <a class ="naf-header" href="catalog/catalog.html">Каталог</a>
+    <a class ="naf-header" href="contacts.html">Контакты</a>
+    <h1 class ="title">Каталог</h1>
+    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi beatae cumque vel deserunt at ducimus. 
         Alias dolorum facilis ex consequuntur cumque officiis exercitationem eum maiores illum error doloremque, 
         ipsam, ipsa odio, qui est doloribus quia iste saepe repellendus laboriosam cupiditate dolorem. Nobis fuga 
         repudiandae expedita amet consequatur iure quis dignissimos maxime, libero odio inventore dolor veritatis eius reiciendis 
